--- a/assessment/events.html
+++ b/assessment/events.html
@@ -56,7 +56,7 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="#"><button>Contact</button></a>
+      <a class = "cta" href ="contact.html"><button>Contact</button></a>
 
       <div class="off-screen-menu">
         <ul>
@@ -74,7 +74,7 @@
 
         <div class="top-content">
           <div class="topnav">
-            <input type="text" placeholder="Filter..." aria-label="Filter">
+            <input type="text" id="searchInput" placeholder="Filter..." aria-label="Filter">
           </div>
         </div>
         
@@ -307,9 +307,9 @@
         I critically reviewed and edited all AI-generated content to ensure it reflects my own
         understanding and perspective.</p>
       <nav class="footer-links">
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <a href="#privacy">Privacy Policy</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
       </nav>
       <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
