--- a/assessment/read-more.html
+++ b/assessment/read-more.html
@@ -85,7 +85,7 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="#"><button>Contact</button></a>
+      <a class = "cta" href ="contact.html"><button>Contact</button></a>
 
       <div class="off-screen-menu">
         <ul>
@@ -186,125 +186,126 @@
       <div>
         <h2 class="read-more-page">Read More</h2>
       </div>
+        <div class="guide-cards">
+          <!-- First Article -->
+            <div class="guide-card-details">
+              <div class="guide-card-info">
+                <div class="guide-card-image">
+                  <img src="./images/braisilia.jpg" alt="Sao Paulo" />
+                </div>
+                <p>Claire Willows</p>
+                <h3>Brasilia Travel Safety Guide</h3>
+                <p class="author">Don't let the fear stop you!</p>
+                <div class="article-meta">
+                    <span>1d ago</span> | 
+                    <span>224 views</span> | 
+                    <span>6 comments</span>
+                </div>
+                <div class="guide-card-read-more">
+                  <a href="./read-more.html" class="button">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- Second Article -->
+            <div class="guide-card-details">
+              <div class="guide-card-info">
+                <div class="guide-card-image">
+                  <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
+                </div>
+                <p>Alexis Bianchi</p>
+                <h3>Sao Paulo Travel Safety Guide</h3>
+                <p class="author">Top tips for staying safe!</p>
+                <div class="guide-card-meta">
+                    <span>Aug 20</span> | 
+                    <span>3K views</span> | 
+                    <span>9 comments</span>
+                </div>
+                <div class="guide-card-read-more">
+                  <a href="./read-more.html" class="button">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- Third Article -->
+            <div class="guide-card-details">
+              <div class="guide-card-info">
+                <div class="guide-card-image">
+                  <img src="./images/Rio de Janeiro.jpg" alt="Rio de Janeiro" />
+                </div>
+                <p>Poppy Evans</p>
+                <h3>Travelling to Rio de Janeiro?</h3>
+                <p class="author">5 tips for staying safe!</p>
+                <div class="guide-card-meta">
+                    <span>1d ago</span> | 
+                    <span>224 views</span> | 
+                    <span>6 comments</span>
+                </div>
+                <div class="guide-card-read-more">
+                  <a href="./read-more.html" class="button">Read More</a>
+                </div>
+              </div>
+            </div>
+        </div>
 
-      <div class="guide-cards">
-        <!-- First Article -->
-          <div class="guide-card-details">
-            <div class="guide-card-info">
-              <div class="guide-card-image">
-                <img src="./images/braisilia.jpg" alt="Sao Paulo" />
-              </div>
-              <p>Claire Willows</p>
-              <h3>Brasilia Travel Safety Guide</h3>
-              <p class="author">Don't let the fear stop you!</p>
-              <div class="article-meta">
-                  <span>1d ago</span> | 
-                  <span>224 views</span> | 
-                  <span>6 comments</span>
-              </div>
-              <div class="guide-card-read-more">
-                <a href="./read-more.html" class="button">Read More</a>
-              </div>
-            </div>
-          </div>
-          <!-- Second Article -->
-          <div class="guide-card-details">
-            <div class="guide-card-info">
-              <div class="guide-card-image">
-                <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
-              </div>
-              <p>Alexis Bianchi</p>
-              <h3>Sao Paulo Travel Safety Guide</h3>
-              <p class="author">Top tips for staying safe!</p>
-              <div class="guide-card-meta">
-                  <span>Aug 20</span> | 
-                  <span>3K views</span> | 
-                  <span>9 comments</span>
-              </div>
-              <div class="guide-card-read-more">
-                <a href="./read-more.html" class="button">Read More</a>
+      <div class="read-more-container"
+        <div class="guide-cards">
+          <!-- First Article -->
+            <div class="guide-card-details">
+              <div class="guide-card-info">
+                <div class="guide-card-image">
+                  <img src="./images/sao-luis.jpeg" alt="Sao Luis" />
+                </div>
+                <p>Katherine Levine</p>
+                <h3>Sao Luis Travel Safety Guide</h3>
+                <p class="author">Embrace the adventure with confidence!</p>
+                <div class="article-meta">
+                    <span>4d ago</span> | 
+                    <span>340 views</span> | 
+                    <span>8 comments</span>
+                </div>
+                <div class="guide-card-read-more">
+                  <a href="./read-more.html" class="button">Read More</a>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- Third Article -->
-          <div class="guide-card-details">
-            <div class="guide-card-info">
-              <div class="guide-card-image">
-                <img src="./images/Rio de Janeiro.jpg" alt="Rio de Janeiro" />
-              </div>
-              <p>Poppy Evans</p>
-              <h3>Travelling to Rio de Janeiro?</h3>
-              <p class="author">5 tips for staying safe!</p>
-              <div class="guide-card-meta">
-                  <span>1d ago</span> | 
-                  <span>224 views</span> | 
-                  <span>6 comments</span>
-              </div>
-              <div class="guide-card-read-more">
-                <a href="./read-more.html" class="button">Read More</a>
-              </div>
-            </div>
-          </div>
-      </div>
-
-      <div class="guide-cards">
-        <!-- First Article -->
-          <div class="guide-card-details">
-            <div class="guide-card-info">
-              <div class="guide-card-image">
-                <img src="./images/sao-luis.jpeg" alt="Sao Luis" />
-              </div>
-              <p>Katherine Levine</p>
-              <h3>Sao Luis Travel Safety Guide</h3>
-              <p class="author">Embrace the adventure with confidence!</p>
-              <div class="article-meta">
-                  <span>4d ago</span> | 
-                  <span>340 views</span> | 
-                  <span>8 comments</span>
-              </div>
-              <div class="guide-card-read-more">
-                <a href="./read-more.html" class="button">Read More</a>
+            <!-- Second Article -->
+            <div class="guide-card-details">
+              <div class="guide-card-info">
+                <div class="guide-card-image">
+                  <img src="./images/belo-horizonte.jpg" alt="Belo Horizonte" />
+                </div>
+                <p>Aisha Das</p>
+                <h3>Belo Horizonte Safety Guide</h3>
+                <p class="author">Travel smart and enjoy every moment.</p>
+                <div class="guide-card-meta">
+                    <span>Oct 23</span> | 
+                    <span>2K views</span> | 
+                    <span>9 comments</span>
+                </div>
+                <div class="guide-card-read-more">
+                  <a href="./read-more.html" class="button">Read More</a>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- Second Article -->
-          <div class="guide-card-details">
-            <div class="guide-card-info">
-              <div class="guide-card-image">
-                <img src="./images/belo-horizonte.jpg" alt="Belo Horizonte" />
-              </div>
-              <p>Aisha Das</p>
-              <h3>Belo Horizonte Safety Guide</h3>
-              <p class="author">Travel smart and enjoy every moment.</p>
-              <div class="guide-card-meta">
-                  <span>Oct 23</span> | 
-                  <span>2K views</span> | 
-                  <span>9 comments</span>
-              </div>
-              <div class="guide-card-read-more">
-                <a href="./read-more.html" class="button">Read More</a>
-              </div>
-            </div>
-          </div>
-          <!-- Third Article -->
-          <div class="guide-card-details">
-            <div class="guide-card-info">
-              <div class="guide-card-image">
-                <img src="./images/curitiba.webp" alt="Curtiba" />
-              </div>
-              <p>Alma Nilsson</p>
-              <h3>Welcome to Curtiba!</h3>
-              <p class="author">Navigate Brasilia with peace of mind.</p>
-              <div class="guide-card-meta">
-                  <span>1d ago</span> | 
-                  <span>224 views</span> | 
-                  <span>6 comments</span>
-              </div>
-              <div class="guide-card-read-more">
-                <a href="./read-more.html" class="button">Read More</a>
+            <!-- Third Article -->
+            <div class="guide-card-details">
+              <div class="guide-card-info">
+                <div class="guide-card-image">
+                  <img src="./images/curitiba.webp" alt="Curtiba" />
+                </div>
+                <p>Alma Nilsson</p>
+                <h3>Welcome to Curtiba!</h3>
+                <p class="author">Navigate Brasilia with peace of mind.</p>
+                <div class="guide-card-meta">
+                    <span>1d ago</span> | 
+                    <span>224 views</span> | 
+                    <span>6 comments</span>
+                </div>
+                <div class="guide-card-read-more">
+                  <a href="./read-more.html" class="button">Read More</a>
+                </div>
               </div>
             </div>
-          </div>
+        </div>
       </div>
 
     </main>
@@ -314,9 +315,9 @@
         I critically reviewed and edited all AI-generated content to ensure it reflects my own
         understanding and perspective.</p>
       <nav class="footer-links">
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <a href="#privacy">Privacy Policy</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
       </nav>
       <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
