--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -57,7 +57,7 @@
           <a href="insights_recommendations.html">Insights and Recommendations</a>
         </nav>
   
-        <a class = "cta" href ="#"><button>Contact</button></a>
+        <a class = "cta" href ="contact.html"><button>Contact</button></a>
   
         <div class="off-screen-menu">
           <ul>
@@ -145,6 +145,18 @@
               </div>
           </div>
         </div>
+
+        <div class="newsletter">
+          <h2>Solo Tourer Newsletter</h2>
+          <p>Our biggest stories, handpicked for you, written by you.</p>
+          <div class="read-more-footer">
+            <div class="rm-footer">
+              <input type="text" id="searchInput" placeholder="Enter your email" aria-label="Email">
+              <button class="signup-button">Sign Up!</button>
+            </div>
+            <p class="signup-message" id="signupMessage" style="display: none;"></p>
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <h2>Acknowledgements</h2>
@@ -152,9 +164,9 @@
           I critically reviewed and edited all AI-generated content to ensure it reflects my own
           understanding and perspective.</p>
         <nav class="footer-links">
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
-          <a href="#privacy">Privacy Policy</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+          <a href="privacy.html">Privacy Policy</a>
         </nav>
         <!-- &copy is unicode equivalent for copyright symbol (©)-->
         <p>&copy; 2024 Your Name. All rights reserved.</p>
