--- a/assessment/index.html
+++ b/assessment/index.html
@@ -85,7 +85,7 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="#"><button>Contact</button></a>
+      <a class = "cta" href ="contact.html"><button>Contact</button></a>
 
       <div class="off-screen-menu">
         <ul>
@@ -175,20 +175,39 @@
       <div class="title-container4">
           <div class="container-headings">
             <h1>Are you feeling unsafe?</h1>
-            <h3>Click on a contact below.</h3>
+            <h3>Call a contact below.</h3>
           </div>
-          <img src="./images/sos.png" alt="Group Photo">
       </div>
 
-      
-      <div class="emergency-container">
-        <div class="rescue">Rescue</div>
-        <div class="hospital">Hospital</div>
-        <div class="parents">Parents</div>
-        <div class="police">Police</div>
-        <div class="firefighter">Firefighter</div>
-        <div class="friends">Friends</div>
-      </div>      
+      <div class="emergency-numbers">
+        <div class="emergency-container">
+          <div class="rescue">
+            <h2>Women's Helpline</h2>
+            <p>180</p>
+          </div>
+          <div class="hospital">
+            <h2>Hospital</h2>
+            <p>192</p>
+          </div>
+          <div class="parents">
+            <h2>Fire and Rescue</h2>
+            <p>193</p>
+          </div>
+          <div class="police">
+            <h2>Police</h2>
+            <p>190</p>
+          </div>
+          <div class="firefighter">
+            <h2>HR Violations</h2>
+            <p>100</p>
+          </div>
+          <div class="friends">
+            <h2>Highway Patrol</h2>
+            <p>191</p>
+          </div>
+        </div>
+      </div> 
+           
     </main>
     <footer class="footer">
       <h2>Acknowledgements</h2>
@@ -196,9 +215,9 @@
         I critically reviewed and edited all AI-generated content to ensure it reflects my own
         understanding and perspective.</p>
       <nav class="footer-links">
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-        <a href="#privacy">Privacy Policy</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
       </nav>
       <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
