--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -160,13 +160,14 @@
       </main>
       <footer class="footer">
         <h2>Acknowledgements</h2>
-        <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+        <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
           I critically reviewed and edited all AI-generated content to ensure it reflects my own
           understanding and perspective.</p>
         <nav class="footer-links">
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="privacy.html">Privacy Policy</a>
+          <a href="references.html">References</a>
         </nav>
         <!-- &copy is unicode equivalent for copyright symbol (©)-->
         <p>&copy; 2024 Your Name. All rights reserved.</p>
