--- a/assessment/index.html
+++ b/assessment/index.html
@@ -8,35 +8,10 @@
     <!--Setting viewport(area that is visible to user based on device) settings for webpage.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Link to manifest file -->
-    <link rel="manifest" href="./js/manifest.json"> <!--Connects web application to manifest file (improves user experience and functionality)-->
     <meta name="theme-color" content="#ABD451"> <!--Sets theme color for browser’s UI for mobile devices.-->
     <!-- Only needed if you have an apple phone -->
     <link rel="logo" sizes="192x192" href="/DECO7140/assessment/icons/frame_67.png"> <!-- specifies icon for application (specific requirements for iOS-->
 
-
-    <!-- service worker registration -->
-    <script>
-      //checks if the browser supports service workers
-      if ('serviceWorker' in navigator) {  
-        // Set up event listener to window object, triggers when the entire page has finished loading + syntax for defining anonymous functions
-        window.addEventListener('load', () => {
-          // If service worker registered at /js/serviceWorker.js, default scope would be path /js/. Service worker can control any URL that starts with /js/
-          // Register service worker using register method of the serviceWorker object - handles cache and background processes
-          navigator.serviceWorker.register('js/serviceWorker.js')
-            // Execute the function within then() block or tells user about potential error. The registration object contains details about service worker that was registered.
-            .then((registration) => { 
-            //logs message to console(often for debugging), scope property of registration object shows scope in which service worker operates (essentially, which URLs it can control).
-              console.log('Service Worker registered with scope: ', registration.scope); 
-            })
-            //Specify what should happen if the Promise fails (code inside the .catch() block will run.) + error - helps you understand the issue
-            .catch((error) => {
-              // Prints message to the console, along with the details of the error.
-              console.log('Service Worker registration failed: ', error);
-            });
-        });
-      }
-    </script>
     <!-- Preconnect informs browser to establish early connections to the specified origin.-->
     <!--<link> used for external resources such as, stylesheets (CSS), icons, and other files and not clickable.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,7 +30,6 @@
     <!--<script> tag used to include JavaScript files in your web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
     <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
     <script type="module" src="js/page_load_message.js" defer></script>
-    <script type="module" src="js/serviceWorker.js" defer></script>
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="./js/components.js" defer></script>
 
@@ -211,13 +185,14 @@
     </main>
     <footer class="footer">
       <h2>Acknowledgements</h2>
-      <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+      <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
         I critically reviewed and edited all AI-generated content to ensure it reflects my own
         understanding and perspective.</p>
       <nav class="footer-links">
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="privacy.html">Privacy Policy</a>
+        <a href="references.html">References</a>
       </nav>
       <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
