--- a/assessment/privacy.html
+++ b/assessment/privacy.html
@@ -8,8 +8,6 @@
     <!--Setting viewport(area that is visible to user based on device) settings for webpage.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Link to manifest file -->
-    <link rel="manifest" href="./js/manifest.json"> <!--Connects web application to manifest file (improves user experience and functionality)-->
     <meta name="theme-color" content="#ABD451"> <!--Sets theme color for browser’s UI for mobile devices.-->
     <!-- Only needed if you have an apple phone -->
     <link rel="logo" sizes="192x192" href="/DECO7140/assessment/icons/frame_67.png"> <!-- specifies icon for application (specific requirements for iOS-->
@@ -34,7 +32,6 @@
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/components.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
-    <script type="module" src="js/manifest.json" defer></script>
 
     <!-- Appears in the browser tab and is used by search engines.-->
     <title>Home</title>
@@ -115,13 +112,14 @@
     </main>
     <footer class="footer">
       <h2>Acknowledgements</h2>
-      <p>In this report, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+      <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
         I critically reviewed and edited all AI-generated content to ensure it reflects my own
         understanding and perspective.</p>
     <nav class="footer-links">
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="privacy.html">Privacy Policy</a>
+        <a href="references.html">References</a>
     </nav>
       <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
